<resources>
    <string name="app_name">CIRCLE BAR</string>
    <string name="scrollview_desc">Hey, I am a description…</string>
    <string name="validate_button">Lancer la préparation</string>
    <string name="preparing_title">Préparation en cours</string>
    <string name="finished_title">Préparation terminée !</string>
    <string name="finished_description">Votre boisson est prête, veuillez récupérer votre verre.</string>
    <string name="waiting_title">Votre commande a bien été enregistrée.</string>
    <string name="waiting_description">Veuillez patienter…</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="tab_text_1">Boissons</string>
    <string name="tab_text_2">Cocktails</string>
    <string name="tab_text_3">Emplacements</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="icon">Icône</string>
    <string name="name">Name</string>
    <string name="edit_description">Modifier une boisson</string>
    <string name="edit_cocktail">Edit cocktail</string>
    <string name="add_drink_to_recipe">Ajouter une boisson</string>
    <string name="save">Enregistrer</string>
    <string name="addDrink_dialog">Ajouter une nouvelle boisson</string>
    <string name="new_cocktail_title">New cocktail</string>
    <string name="retrieved_cup">Gobelet récupéré</string>
    <string name="admin_settings">user</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="userdata_title">Edit username/password</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
</resources>